manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gausstalk-frontend
  labels:
    app.kubernetes.io/component: gausstalk-frontend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3        # how many pods we can add at a time
      maxUnavailable: 1  # maxUnavailable define how many pods can be unavailable
                         # during the rolling update
  selector:
    matchLabels:
      app.kubernetes.io/component: gausstalk-frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gausstalk-frontend
    spec:
      containers:
      - name: gausstalk-frontend
        image: gausstalk.azurecr.io/gausstalk-frontend
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
